--- a/style.css
+++ b/style.css
@@ -24,3 +24,11 @@ body {
   height: 150px;
   width: 150px;
 }
+.selected {
+    border: 4px solid red;
+  }
+
+  .match {
+    border: 4px solid green;
+    background-image: none !important;
+  }
