--- a/style.css
+++ b/style.css
@@ -1,34 +1,66 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
+*, *::before, *::after {
+    box-sizing: border-box;
 }
 
 body {
-  margin: 20px 0;
+    margin: 20px 0;
 }
 
 .grid {
-  max-width: 960px;
-  margin: 0 auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
+    max-width: 960px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 .card {
-  margin: 5px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center center;
-  height: 150px;
-  width: 150px;
+    position: relative;
+    transition: all 0.4s linear;
+    transform-style: preserve-3d;
+    margin: 5px;
 }
-.selected {
-    border: 4px solid red;
+.front {
+    background: url('./img/MKCard.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+  .back {
+    transform: rotateY(180deg);
+    background-color: white;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 
-  .match {
-    border: 4px solid green;
+.card, .back, .front {
+    height: 150px;
+    width: 130px;
+
+}
+
+.back, .front {
+    position: absolute;
+    backface-visibility: hidden;
+}
+
+.selected {
+    transform: rotateY(180deg);
+
+}
+
+.match {
     background-image: none !important;
+}
+.match .front {
+    background: white !important;
+    
+  }
+  @media only screen and (max-width: 1068px) {
+    .card, .back, .front {
+        height: 100px;
+        width: 85px;
+    
+    }
   }
