--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 .card, .back, .front {
     height: 150px;
     width: 130px;
-    flex-basis: 110px;
+    /* flex-basis: 110px; */
 
 }
 
@@ -63,7 +63,7 @@ body {
         height: 100px;
         width: 85px;
         justify-content: center;
-        flex-basis: 70px;
+        flex-basis: 85px;
 
     }
   }
