--- a/style.css
+++ b/style.css
@@ -4,11 +4,40 @@
 
 body {
     margin: 10px 0;
+    background-image: url('/img/sesame3.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
+#logo{
+    position: absolute; 
+    margin-left: 25%;
+    margin-top: -7%;
+    width: 50%;
 
+}
+.optButton{
+    margin-left: 20px;
+    border: 5px inset #D1B464;
+    border-radius: 10px;
+    font-size: calc(.3em + 1vw) ;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    text-shadow: 1px 1px 1px rgb(0, 0, 0);
+    font-family:arial, helvetica, sans-serif; 
+    text-decoration:none; 
+     background-image: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
+     radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);         
+     height: 55px;
+     width: 95px;
+     box-shadow: 2px 2px 12px black;
+     z-index: 1;
+     position: relative;
+}
 .grid {
     max-width: 960px;
     margin: 0 auto;
+    margin-top: -50px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -28,7 +57,9 @@ body {
   }
   .back {
     transform: rotateY(180deg);
-    background-color: white;
+    background-color: rgb(255, 255, 255);
+    border: double 10px;
+    border-radius: 15px;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
@@ -55,15 +86,19 @@ body {
     background-image: none !important;
 }
 .match .front {
-    background: white !important;
+    background: transparent !important;
     
   }
   @media only screen and (max-width: 1068px) {
     .card, .back, .front {
         height: 100px;
-        width: 70px;
+        width: 65px;
         justify-content: center;
-        flex-basis: 70px;
-
+        /* flex-basis: 55px; */
+    }
+    body{
+        background-size: cover;
+        background-repeat: no-repeat;
+    height: 100vh;
     }
   }
