--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 
 }
 .optButton{
-    margin-left: 20px;
+    /* margin-left: 20px;
     border: 5px inset #D1B464;
     border-radius: 10px;
     font-size: calc(.3em + 1vw) ;
@@ -32,7 +32,8 @@ body {
      width: 95px;
      box-shadow: 2px 2px 12px black;
      z-index: 1;
-     position: relative;
+     position: relative; */
+     
 }
 .grid {
     max-width: 960px;
@@ -99,6 +100,6 @@ body {
     body{
         background-size: cover;
         background-repeat: no-repeat;
-    height: 100vh;
+    height: 120vh;
     }
   }
