--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    margin: 10px 0;
+    margin-left: 20px 0;
     background-image: url('/img/sesame3.jpg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -12,7 +12,7 @@ body {
 #logo{
     position: absolute; 
     margin-left: 25%;
-    margin-top: -7%;
+    /* margin-top: -7%; */
     width: 50%;
 
 }
@@ -38,7 +38,7 @@ body {
 .grid {
     max-width: 960px;
     margin: 0 auto;
-    margin-top: -50px;
+    /* margin-top: -50px; */
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -92,7 +92,7 @@ body {
   }
   @media only screen and (max-width: 1068px) {
     .card, .back, .front {
-        height: 100px;
+        height: 75px;
         width: 65px;
         justify-content: center;
         /* flex-basis: 55px; */
