--- a/style.css
+++ b/style.css
@@ -3,42 +3,63 @@
 }
 
 body {
-    margin-left: 20px 0;
+    /* margin-left: 20px 0; */
     background-image: url('/img/sesame3.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
 }
-#logo{
-    position: absolute; 
+
+#game {
+    z-index: 100;
+    /* background-image: url('./djkVids/MotivationalspeechDjKhaled.mp4'); */
+}
+
+video {
+    z-index: -10;
+    position: absolute;
+    width: 100vw;
+    height: 100vw;
+    background-color: white;
+    display: none;
+}
+
+.level1 {
+    display: none;
+}
+.level2 {
+    display: none;
+}
+
+#logo {
+    position: absolute;
     margin-left: 25%;
     /* margin-top: -7%; */
     width: 50%;
-
 }
-.optButton{
-    /* margin-left: 20px;
+
+.optButton {
+    margin-left: 20px;
     border: 5px inset #D1B464;
     border-radius: 10px;
-    font-size: calc(.3em + 1vw) ;
+    font-size: calc(.3em + 1vw);
     text-align: center;
     color: rgb(255, 255, 255);
     text-shadow: 1px 1px 1px rgb(0, 0, 0);
-    font-family:arial, helvetica, sans-serif; 
-    text-decoration:none; 
-     background-image: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
-     radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);         
-     height: 55px;
-     width: 95px;
-     box-shadow: 2px 2px 12px black;
-     z-index: 1;
-     position: relative; */
-     
+    font-family: arial, helvetica, sans-serif;
+    text-decoration: none;
+    background-image: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%), radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
+    height: 35px;
+    width: 95px;
+    box-shadow: 2px 2px 12px black;
+    z-index: 1;
+    position: relative;
 }
+
 .grid {
     max-width: 960px;
-    margin: 0 auto;
-    /* margin-top: -50px; */
+    /* margin: 0 auto; */
+    margin-top: -35px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -50,13 +71,15 @@ body {
     transform-style: preserve-3d;
     margin: 5px;
 }
+
 .front {
     background: url('./img/MKCard.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
-  }
-  .back {
+}
+
+.back {
     transform: rotateY(180deg);
     background-color: rgb(255, 255, 255);
     border: double 10px;
@@ -64,13 +87,12 @@ body {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
-  }
+}
 
 .card, .back, .front {
     height: 150px;
     width: 130px;
     /* flex-basis: 110px; */
-
 }
 
 .back, .front {
@@ -80,26 +102,90 @@ body {
 
 .selected {
     transform: rotateY(180deg);
-
 }
 
 .match {
     background-image: none !important;
 }
+
 .match .front {
     background: transparent !important;
-    
-  }
-  @media only screen and (max-width: 1068px) {
+}
+
+i:hover {
+    text-shadow: 2px 2px 8px rgb(155, 255, 149);
+    /* color: rgb(89, 255, 17); */
+}
+
+#start {
+    margin-top: 13%;
+    margin-left: 43%;
+    display: block;
+    width: 5rem;
+    height: 4rem;
+    animation: heartbeat 2.5s ease-in-out infinite both;
+    border-radius: 100px;
+    padding: 10px 10px 0px 10px;
+    font-size: 15px;
+    text-shadow: 2px 2px 2px black;
+    position: absolute;
+}
+
+#start:hover {
+    animation-play-state: paused;
+    text-shadow: 1px 1px 10px rgb(250, 250, 250);
+}
+
+#round2 {
+    z-index: 100;
+    margin-top: 13%;
+    margin-left: 43%;
+    position: absolute;
+    margin-left: 25%;
+    width: 5rem;
+    height: 4rem;
+    animation: heartbeat 2.5s ease-in-out infinite both;
+    border-radius: 100px;
+    padding: 10px 10px 0px 10px;
+    font-size: 15px;
+    text-shadow: 2px 2px 2px black;
+    display: none;
+}
+
+#round2:hover {
+    animation-play-state: paused;
+    text-shadow: 1px 1px 10px rgb(250, 250, 250);
+}
+
+#restart {
+    margin-left: 25%;
+    width: 5rem;
+    height: 4rem;
+    animation: heartbeat 2.5s ease-in-out infinite both;
+    border-radius: 100px;
+    padding: 10px 3px 0px 3px;
+    font-size: 15px;
+    text-shadow: 2px 2px 2px black;
+    position: absolute;
+    z-index: 100;
+    display: none;
+}
+
+#restart:hover {
+    animation-play-state: paused;
+    text-shadow: 1px 1px 10px rgb(250, 250, 250);
+}
+
+@media only screen and (max-width: 1068px) {
     .card, .back, .front {
         height: 95px;
         width: 75px;
         justify-content: center;
         /* flex-basis: 55px; */
     }
-    body{
+    body {
         background-size: cover;
         background-repeat: no-repeat;
-    height: 120vh;
+        height: 120vh;
     }
-  }
+}
