--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ i:hover {
     text-shadow: 1px 1px 10px rgb(250, 250, 250);
 }
 
-#round2 {
+#nextRound {
     z-index: 100;
     margin-top: 13%;
     margin-left: 43%;
@@ -152,7 +152,7 @@ i:hover {
     display: none;
 }
 
-#round2:hover {
+#nextRound:hover {
     animation-play-state: paused;
     text-shadow: 1px 1px 10px rgb(250, 250, 250);
 }
