--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body {
     /* margin-left: 20px 0; */
-    background-image: url('/img/sesame3.jpg');
+    /* background-image: url('/img/sesame3.jpg'); */
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
