--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+    background-color: rgb(116, 183, 228);
 }
 
 #game {
@@ -20,7 +21,15 @@ video {
     position: absolute;
     width: 100vw;
     height: 100vw;
-    background-color: white;
+    background-color: black;
+    display: none;
+}
+
+#confetti{
+    position: absolute;
+    z-index: 100;
+    width: 100vh;
+    height: 100vh;
     display: none;
 }
 
