--- a/style.css
+++ b/style.css
@@ -2,13 +2,11 @@
     box-sizing: border-box;
 }
 
-body {
+.bkgd {
     /* margin-left: 20px 0; */
-    /* background-image: url('/img/sesame3.jpg'); */
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-color: rgb(0, 0, 0);
+    background-image: url('/img/blackbkgd.jpg');
+    background-size: auto;
+    background-repeat: repeat;
 }
 
 #game {
@@ -25,7 +23,7 @@ video {
     display: none;
 }
 
-#confetti{
+#confetti {
     position: absolute;
     z-index: 100;
     width: 100vh;
@@ -36,6 +34,7 @@ video {
 .level1 {
     display: none;
 }
+
 .level2 {
     display: none;
 }
@@ -127,8 +126,8 @@ i:hover {
 }
 
 #start {
-    margin-top: 13%;
-    margin-left: 43%;
+    margin-top: 25%;
+    margin-left: 45%;
     display: block;
     width: 5rem;
     height: 4rem;
@@ -147,10 +146,9 @@ i:hover {
 
 #nextRound {
     z-index: 100;
-    margin-top: 13%;
-    margin-left: 43%;
+    margin-top: 25%;
+    margin-left: 45%;
     position: absolute;
-    margin-left: 25%;
     width: 5rem;
     height: 4rem;
     animation: heartbeat 2.5s ease-in-out infinite both;
@@ -167,7 +165,8 @@ i:hover {
 }
 
 #restart {
-    margin-left: 25%;
+    margin-top: 25%;
+    margin-left: 45%;
     width: 5rem;
     height: 4rem;
     animation: heartbeat 2.5s ease-in-out infinite both;
