--- a/style.css
+++ b/style.css
@@ -57,13 +57,28 @@ video {
     font-family: arial, helvetica, sans-serif;
     text-decoration: none;
     background-image: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%), radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
-    height: 35px;
+    height: 50px;
     width: 95px;
     box-shadow: 2px 2px 12px black;
     z-index: 1;
-    position: relative;
+    position: absolute;
+}
+#lifeCountID {
+    margin-top: 2%;
+    margin-left: 5%;
+    z-index: 1;
+    width: calc(6em + 1vw);
+    height: calc(2.7em + 1vh);
 }
 
+#scoreBox {
+    margin-top: 2%;
+    margin-left: 82%;
+    position: relative;
+    z-index: 1;
+    width: calc(6em + 1vw);
+    height: calc(2.7em + 1vh);
+}
 .grid {
     max-width: 960px;
     /* margin: 0 auto; */
