--- a/style.css
+++ b/style.css
@@ -8,6 +8,15 @@
     background-size: auto;
     background-repeat: repeat;
 }
+.indexbkgd {
+    /* margin-left: 20px 0; */
+    background-image: url('/img/sesame3.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 100vh;
+}
+
 
 #game {
     z-index: 100;
@@ -45,7 +54,9 @@ video {
     /* margin-top: -7%; */
     width: 50%;
 }
-
+.indexlogo{
+margin-top: 40%;
+}
 .optButton {
     margin-left: 20px;
     border: 5px inset #D1B464;
@@ -63,6 +74,7 @@ video {
     z-index: 1;
     position: absolute;
 }
+
 #lifeCountID {
     margin-top: 2%;
     margin-left: 5%;
@@ -79,6 +91,7 @@ video {
     width: calc(6em + 1vw);
     height: calc(2.7em + 1vh);
 }
+
 .grid {
     max-width: 960px;
     /* margin: 0 auto; */
@@ -88,12 +101,30 @@ video {
     justify-content: space-evenly;
 }
 
+nav {
+    color: white;
+    list-style: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    display: flex;
+    flex-direction: row;
+    text-decoration: none;
+}
+
 .card {
     position: relative;
     transition: all 0.4s linear;
     transform-style: preserve-3d;
     margin: 5px;
 }
+
+a {
+    text-decoration: none;
+    color: white;
+
+}
+
+
 
 .front {
     background: url('./img/MKCard.png');
@@ -173,10 +204,10 @@ i:hover {
     text-shadow: 2px 2px 2px black;
     display: none;
 }
+
 @keyframes delaybtn {
     0% {
         opacity: 0;
-
     }
     99% {
         opacity: 0;
@@ -185,6 +216,7 @@ i:hover {
         opacity: 1;
     }
 }
+
 #nextRound:hover {
     animation-play-state: paused;
     text-shadow: 1px 1px 10px rgb(250, 250, 250);
