--- a/css/trivia.css
+++ b/css/trivia.css
@@ -1,7 +1,14 @@
 body {
-    font-family: Open Sans;
+    font-family: Arial, Helvetica, sans-serif
 }
+#triviaBody{
+    background: url('../img/wallpaper2you_451343.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 100vh;
 
+}
 h1 {
     text-align: center;
 }
@@ -16,7 +23,7 @@ h1 {
 }
 
 .button {
-    border:4px solid;
+    border: 2px inset #D1B464;
     border-radius:5px;
     width: 40px;
     padding-left:5px;
@@ -47,10 +54,11 @@ button {
     width:50%;
     margin:auto;
     padding: 0 25px 40px 10px;
-    background-color: #1E90FF;
-    border:4px solid #B0E0E6;
-    border-radius:5px;
-    color: #FFFFFF;
+    background-image: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%), radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
+    border: 5px inset #D1B464;
+
+    border-radius:15px;
+    color: black;
     font-weight: bold;
     box-shadow: 5px 5px 5px #888;
 }
