--- a/style.css
+++ b/style.css
@@ -16,18 +16,23 @@
     background-position: center center;
     height: 100vh;
 }
+.index{
+    background-color: rgba(75, 69, 52, 0.9);
+    border: 2px inset rgb(209, 180, 100);
+    border-radius: 10px;
+}
 nav {
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
     /* display: flex; */
     /* flex-direction: row; */
     /* text-decoration: none; */
 }
 li{
     list-style: none;
-    font-size: 50px;
+    font-size: 30px;
     text-shadow: 3px 3px 3px black;
+    text-decoration: underline;
 }
 #game {
     z-index: 100;
