--- a/style.css
+++ b/style.css
@@ -4,10 +4,16 @@
 
 .bkgd {
     /* margin-left: 20px 0; */
-    background-image: url('/img/blackbkgd.jpg');
-    background-size: auto;
-    background-repeat: repeat;
+    background-image: url('/img/wallpaper2you_451343.png');
+    background-size: cover;
+    background-repeat-y: no-repeat;
+    animation: slide2 190s linear infinite;
 }
+@keyframes slide2 {
+    from { background-position: 0 0; }
+    to { background-position: -8000px 0; }
+}
+
 .indexbkgd {
     /* margin-left: 20px 0; */
     background-image: url('/img/sesame3.jpg');
@@ -129,6 +135,8 @@ margin-top: 40%;
 a {
     text-decoration: none;
     color: white;
+    text-shadow: 1px 1px 1px black;
+    font-family: Arial, Helvetica, sans-serif
 
 }
 
@@ -260,7 +268,7 @@ i:hover {
     }
     body {
         background-size: cover;
-        background-repeat: no-repeat;
+        /* background-repeat: no-repeat; */
         height: 120vh;
     }
 }
